# RustDefrag-GUI

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/: app.rs  main.rs
src/defrag_engine/: analyzer.rs  defrag.rs  errors.rs  mod.rs  volume.rs  whitelist.rs  winapi.rs
src/engine/: messages.rs  mod.rs  worker.rs
src/ui/: charts.rs  cluster_map.rs  mod.rs  stats_panel.rs  theme.rs
